tests/types/errors/subtype_assignment_invalid.mog
type Animal struct {}
type Dog struct < Animal {}

var d Dog = Animal()
